--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,9 @@ name = "dima-advent-of-code-2019"
 version = "1.0.0"
 authors = ["Dmitry Kochkin <cooch@mail.ru>"]
 edition = "2018"
+
+[dependencies]
+permutohedron = "*"
+log = "*"
+stderrlog = "*"
+structopt = "*"
